--- a/public/css/customStyle.css
+++ b/public/css/customStyle.css
@@ -1,22 +1,86 @@
-.wellId{
-	height: 200px;
-	margin-top: 50px;
+.wellId {
+    height: 200px;
+    margin-top: 50px;
 }
-.navbar{
-	height: 50px;
+
+.navbar {
+    height: 50px;
 }
-img{
-	width: 200px;
-	height: 250px;
+
+tr td {
+    color: green;
+    font-family: sans-serif;
 }
-tr td{
-		color: green;
-		font-family: sans-serif;
+
+#searchInput {
+    width: 100%;
+    height: 40px;
 }
-#searchInput{
-	width: 100%;
-	height: 40px;
+
+#del {
+    margin-left: 20px;
 }
-#del{
-	margin-left: 20px;
+
+#moveLeft {
+    margin-left: -90px;
+}
+
+#selectOrder {
+    margin-top: -20px;
+}
+
+@media only screen and (max-width: 760px) {
+    
+    /* Force table to not be like tables anymore */
+    #display{
+        margin-top: 150px;
+    }
+    #moveLeft {
+    margin-left: 0;
+}
+     table, 
+     thead, 
+     tbody, 
+     th, 
+     td, 
+     tr { 
+        display: block; 
+    }
+ 
+    /* Hide table headers (but not display: none;, for accessibility) */
+     thead tr { 
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+ 
+     tr { border: 1px solid #ccc; }
+ 
+     td { 
+        /* Behave  like a "row" */
+        border: none;
+        border-bottom: 1px solid #eee; 
+        position: relative;
+        padding-left: 50%; 
+        white-space: normal;
+        text-align:left;
+    }
+ 
+     td:before { 
+        /* Now like a table header */
+        position: absolute;
+        /* Top/left values mimic padding */
+        top: 6px;
+        left: 6px;
+        width: 45%; 
+        padding-right: 10px; 
+        white-space: nowrap;
+        text-align:left;
+        font-weight: bold;
+    }
+ 
+    /*
+    Label the data
+    */
+     td:before { content: attr(); }
 }
